kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fast-api
  labels:
    app: fast-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fast-api
  template:
    metadata:
      labels:
        app: fast-api
    spec:
      containers:
      - name: fast-api
        image: simbamon/k8s-demo:0.0.1
        ports:
        - containerPort: 80
        resources:
          request:
            cpu: 200m
            memory: 300Mi
          limits:
            memory: 400Mi
